sap : smooth the announce period average closes #5462